up z-index to prevent layering with article date (#81)

--- a/web/themes/custom/bay_area_camp/sass/components/_navigation.scss
+++ b/web/themes/custom/bay_area_camp/sass/components/_navigation.scss
@@ -27,7 +27,11 @@
       }
     }
     > ul {
-      background: darken($grayish, 4%);
+      background: darken($grayish, 5%);
+
+      &.is-dropdown-submenu {
+        z-index: 9;
+      }
     }
 
     &.is-accordion-submenu-item {
